--- a/handouts.html
+++ b/handouts.html
@@ -228,6 +228,8 @@ $(document).ready(function () {
 </div>
 
 
+<p><strong>Modeling for SSAs</strong></p>
+<p><a href="static/handouts/conceptual-diagram.pdf">Conceptual diagram</a></p>
 <p><strong>Species Status Assessments</strong></p>
 <p><a href="static/handouts/Smith_etal_2018_SSA.pdf">SSA process overview</a></p>
 <p><a href="McGowan_etal_2017_SDTSSA.pdf">Sonoran desert tortoise SSA case study</a></p>
