--- a/lectures.html
+++ b/lectures.html
@@ -232,7 +232,8 @@ $(document).ready(function () {
 <p><a href="static/lectures/ssa200_lecture1_intro.pdf">Intro to modeling for SSAs</a></p>
 <p><a href="static/lectures/ssa200_lecture2_descriptive-data.pdf">Qualitative data</a></p>
 <p><a href="static/lectures/ssa200_lecture3_presence-data.pdf">Presence-type data</a></p>
-<p><a href="static/lectures/ssa200_lecture4_count-data.pdf">Count data</a></p>
+<p><a href="static/lectures/ssa200_lecture4_count-data.pdf">Count data</a><br />
+<a href="static/lectures/ssa200_lecture4_count-data_notes.pdf">Count data … with notes!</a></p>
 <p><a href="static/lectures/ssa200_lecture5_demographic-data.pdf">Demographic data</a></p>
 <p><strong>Predicting future conditions</strong></p>
 <p><a href="static/lectures/ssa200_lecture6_projections.pdf">Intro to projections and uncertainty</a></p>
