--- a/handouts.html
+++ b/handouts.html
@@ -230,14 +230,23 @@ $(document).ready(function () {
 
 <p><strong>Modeling for SSAs</strong></p>
 <p><a href="static/handouts/conceptual-diagram.pdf">Conceptual diagram</a></p>
+<hr />
 <p><strong>Species Status Assessments</strong></p>
 <p><a href="static/handouts/Smith_etal_2018_SSA.pdf">SSA process overview</a></p>
 <p><a href="McGowan_etal_2017_SDTSSA.pdf">Sonoran desert tortoise SSA case study</a></p>
+<hr />
 <p><strong>General</strong></p>
 <p><a href="static/handouts/Broman-Woo-2018.pdf">Best practices for spreadsheets</a></p>
 <p><a href="static/handouts/distributions.pdf">Guide to statistical distributions</a></p>
+<hr />
 <p><strong>Species Distribution Models</strong></p>
 <p><a href="static/handouts/SDMs-for-educators-and-practitioners.pdf">SDMs for Conservation Educators and Practioners</a></p>
+<hr />
+<p><strong>Recommended Reading</strong></p>
+<p><a href="https://www.amazon.com/Signal-Noise-Many-Predictions-Fail-but-ebook/dp/B007V65R54">The Signal and the Noise: Why So Many Predictions Fail–but Some Don’t</a><br />
+Drawing on his own groundbreaking work, Silver examines the world of prediction, investigating how we can distinguish a true signal from a universe of noisy data. Most predictions fail, often at great cost to society, because most of us have a poor understanding of probability and uncertainty. Both experts and laypeople mistake more confident predictions for more accurate ones. But overconfidence is often the reason for failure. If our appreciation of uncertainty improves, our predictions can get better too. This is the “prediction paradox”: The more humility we have about our ability to make predictions, the more successful we can be in planning for the future.</p>
+<p><a href="https://www.amazon.com/Quantitative-Conservation-Biology-Population-Viability/dp/0878935460">Quantitative Conservation Biology: Theory and Practice of Population Viability Analysis</a><br />
+The goal of this book is to provide practical, intelligible, and intuitive explanations of population modeling to empirical ecologists and conservation biologists. Modeling methods that do not require large amounts of data (typically unavailable for endangered species) are emphasized. As such, the book is appropriate for undergraduate and graduate students interested in quantitative conservation biology, managers charged with preserving endangered species, and, in short, for any conservation biologist or ecologist seeking to better understand the analysis and modeling of population data.</p>
 
 
 
