updated offerings locations

--- a/scheduled.html
+++ b/scheduled.html
@@ -331,7 +331,7 @@ div.tocify {
 <h3>Oct 23-24, 2018 - Houston TX</h3>
 <p><strong>Dates &amp; Location</strong><br />
 October 23-24, 2018; 8 am to 5 pm<br />
-Texas Parks and Wildlife Departmentâ€™s Region IV HQ<br />
+Texas Parks and Wildlife Department’s Region IV HQ<br />
 Conference Room<br />
 14200 Garrett Rd. Houston, TX<br />
 Next to Sheldon Lake State Park.</p>
@@ -360,9 +360,9 @@ Use link to make reservation by Oct. 1.<br />
 Free shuttle to GBI Airport.</p>
 <hr />
 </div>
-<div id="dec-2018---fit-summit" class="section level3">
-<h3>Dec 2018 - FIT Summit</h3>
-<p><em>Details coming soon</em></p>
+<div id="dec-12-13-2018---los-angeles-ca-sat" class="section level3">
+<h3>Dec 12-13, 2018 - Los Angeles, CA (SAT)</h3>
+<p>SSA 200 will be offered during the SAT Calibration Workshop</p>
 </div>
 
 
