--- a/handouts.html
+++ b/handouts.html
@@ -247,6 +247,10 @@ $(document).ready(function () {
 Drawing on his own groundbreaking work, Silver examines the world of prediction, investigating how we can distinguish a true signal from a universe of noisy data. Most predictions fail, often at great cost to society, because most of us have a poor understanding of probability and uncertainty. Both experts and laypeople mistake more confident predictions for more accurate ones. But overconfidence is often the reason for failure. If our appreciation of uncertainty improves, our predictions can get better too. This is the “prediction paradox”: The more humility we have about our ability to make predictions, the more successful we can be in planning for the future.</p>
 <p><a href="https://www.amazon.com/Quantitative-Conservation-Biology-Population-Viability/dp/0878935460">Quantitative Conservation Biology: Theory and Practice of Population Viability Analysis</a><br />
 The goal of this book is to provide practical, intelligible, and intuitive explanations of population modeling to empirical ecologists and conservation biologists. Modeling methods that do not require large amounts of data (typically unavailable for endangered species) are emphasized. As such, the book is appropriate for undergraduate and graduate students interested in quantitative conservation biology, managers charged with preserving endangered species, and, in short, for any conservation biologist or ecologist seeking to better understand the analysis and modeling of population data.</p>
+<hr />
+<p><strong>Exploring uncertainties</strong></p>
+<p><a href="https://amtucker.shinyapps.io/wild4890_pva/">Another Shiny app!</a><br />
+This app allows you to explore the effects of incoporating different types of uncertainties into population size projections using lambda and/or intrinsic rate of increase.</p>
 
 
 
