--- a/handouts.html
+++ b/handouts.html
@@ -251,6 +251,10 @@ The goal of this book is to provide practical, intelligible, and intuitive expla
 <p><strong>Exploring uncertainties</strong></p>
 <p><a href="https://amtucker.shinyapps.io/wild4890_pva/">Another Shiny app!</a><br />
 This app allows you to explore the effects of incoporating different types of uncertainties into population size projections using lambda and/or intrinsic rate of increase.</p>
+<hr />
+<p><strong>Demographic matrix models</strong>_<br />
+<a href="https://comadre-db.org/">COMADRE and COMPADRE Databases</a><br />
+This is a freely-available database where the authors have compiled estimates of demographic rates from published studies of plants (COMPADRE) and animals (COMADRE). There is demographic information from 405 animals and 695 plants in the database currently, with the majority from N. America. This could be a great resource for demographic estimates of sister taxa.</p>
 
 
 
