--- a/handouts.html
+++ b/handouts.html
@@ -248,11 +248,13 @@ Drawing on his own groundbreaking work, Silver examines the world of prediction,
 <p><a href="https://www.amazon.com/Quantitative-Conservation-Biology-Population-Viability/dp/0878935460">Quantitative Conservation Biology: Theory and Practice of Population Viability Analysis</a><br />
 The goal of this book is to provide practical, intelligible, and intuitive explanations of population modeling to empirical ecologists and conservation biologists. Modeling methods that do not require large amounts of data (typically unavailable for endangered species) are emphasized. As such, the book is appropriate for undergraduate and graduate students interested in quantitative conservation biology, managers charged with preserving endangered species, and, in short, for any conservation biologist or ecologist seeking to better understand the analysis and modeling of population data.</p>
 <hr />
-<p><strong>Exploring uncertainties</strong></p>
+<p><strong>Exploring probability and uncertainty</strong></p>
 <p><a href="https://amtucker.shinyapps.io/wild4890_pva/">Another Shiny app!</a><br />
 This app allows you to explore the effects of incoporating different types of uncertainties into population size projections using lambda and/or intrinsic rate of increase.</p>
+<p><a href="https://seeing-theory.brown.edu/">A visual introduction to probability and statistics</a><br />
+This is a very cool set of modules to introduce basic concepts in probability and statistics using interactive visuals. Highly recommended!</p>
 <hr />
-<p><strong>Demographic matrix models</strong>_<br />
+<p><strong>Demographic matrix models</strong><br />
 <a href="https://comadre-db.org/">COMADRE and COMPADRE Databases</a><br />
 This is a freely-available database where the authors have compiled estimates of demographic rates from published studies of plants (COMPADRE) and animals (COMADRE). There is demographic information from 405 animals and 695 plants in the database currently, with the majority from N. America. This could be a great resource for demographic estimates of sister taxa.</p>
 
